--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,10 +1,29 @@
 .navLink {
 	color: #14274C;
+	font-size: 18px;
 	margin-left: 12px;
 	margin-right: 12px;
-	font-size: 18px;
 }
 
 .navLink:hover {
 	text-decoration: underline;
+}
+
+.navAdmin {
+	color: #14274C;
+	font-size: 18px;
+
+	margin-left: 12px;
+	margin-right: 12px;
+	padding: 5px 10px;
+
+	border-style: solid;
+	border-color: #14274C;
+	border-width: 1px;
+	border-radius: 100px;
+}
+
+.navAdmin:hover {
+	background-color: #14274C;
+	color: #FFFFFF;
 }
