--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,11 +17,43 @@
 }
 
 body {
-	background-color: rgb(245, 244, 241);
+	background-color: #F5F4F1 !important;
 	color: #14274C;
 	max-width: 100vw;
 	overflow-x: hidden;
 	width: 100%;
 	height: 100%;
 	font-family: 'Palatino', sans-serif !important;
+}
+
+input {
+	padding: 2px 5px;
+	text-align: center;
+
+	border-radius: 7px;
+	border-style: solid;
+	border-color: #14274C;
+	border-width: 1px;
+}
+
+input:focus {
+    outline: none;
+}
+
+input[type=number]::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+}
+
+select {
+	padding: 4px 5px;
+
+	background-color: transparent;
+	border-style: solid;
+	border-color: #14274C;
+	border-width: 1px;
+	border-radius: 7px;
+}
+
+select:focus {
+    outline: none;
 }
