--- a/src/styles/venue.module.css
+++ b/src/styles/venue.module.css
@@ -1,6 +1,8 @@
 .container {
 	background-color: #FFFFFF;
 	border-radius: 10px;
+	margin-top: 20px;
+	margin-bottom: 40px;
 	padding: 40px 0px;
 	color: #14274C;
 }
