--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
 	--foreground-rgb: 0, 0, 0;
 	--background-start-rgb: 214, 219, 220;
@@ -17,7 +18,7 @@
 }
 
 body {
-	background-color: #F5F4F1 !important;
+	background-color: #E8E6DF !important;
 	color: #14274C;
 	max-width: 100vw;
 	overflow-x: hidden;
