--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,9 +31,7 @@ input {
 	text-align: center;
 
 	border-radius: 7px;
-	border-style: solid;
-	border-color: #14274C;
-	border-width: 1px;
+	border: 1px solid #14274C;
 }
 
 input:focus {
@@ -44,13 +42,17 @@ input[type=number]::-webkit-inner-spin-button {
 	-webkit-appearance: none;
 }
 
+input[disabled] {
+	color: #ABABAB;
+	border: 1px solid #ABABAB;
+	cursor: default;
+}
+
 select {
 	padding: 4px 5px;
 
 	background-color: transparent;
-	border-style: solid;
-	border-color: #14274C;
-	border-width: 1px;
+	border: 1px solid #14274C;
 	border-radius: 7px;
 }
 
