--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,7 @@
 }
 
 body {
-	background-color: #E8E6DF !important;
+	background-color: #F5F4F1 !important;
 	color: #14274C;
 	max-width: 100vw;
 	overflow-x: hidden;
