--- a/src/styles/venueItem.module.css
+++ b/src/styles/venueItem.module.css
@@ -14,7 +14,8 @@
 
 .addVenueItem {
 	background-color: white;
-	border-radius: 8px;
+	border-radius: 0.75rem;
+	margin: 0.5rem;
 	box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 	display: flex;
 	flex-direction: column;
@@ -28,4 +29,8 @@
 	color: #14274C;
 	position: relative;
 	z-index: 1;
+}
+
+.rentLink:hover {
+	text-decoration: underline;
 }
