--- a/src/styles/modal.module.css
+++ b/src/styles/modal.module.css
@@ -8,3 +8,11 @@
 	padding: 5px 10px;
 	border-radius: 50px;
 }
+
+.confirmButton {
+	color: #FFFFFF;
+	background-color: #14274C;
+	border-radius: 10px;
+	padding: 7px 35px;
+	margin: 0px 20px;
+}
