--- a/src/styles/court.module.css
+++ b/src/styles/court.module.css
@@ -16,8 +16,7 @@
 }
 
 .tableCell {
-	border: 0.5px solid #14274C;
-	padding: 10px 0px;
+	border: 0.5px solid #14274C !important;
 	text-align: center !important;
 }
 
