fix: Fix venue info and getAccessToken apiRoot

--- a/src/styles/venuetab.module.css
+++ b/src/styles/venuetab.module.css
@@ -6,3 +6,12 @@
 	border-color: #14274C;
 	border-style: solid;
 }
+
+.courtListCell {
+	font-size: 15px;
+	color: #14274C;
+	border-radius: 20px;
+	margin: 0px 3px;
+	padding: 5px 10px;
+	border: 1px solid #14274C;
+}
