--- a/src/styles/modal.module.css
+++ b/src/styles/modal.module.css
@@ -25,3 +25,10 @@
 	padding: 5px 10px;
 	border: 1px solid #14274C;
 }
+
+.modalTextArea {
+	font-size: 15px;
+	color: #14274C;
+	overflow-wrap: break-word;
+	word-break: break-all;
+}
