--- a/src/styles/timetable.module.css
+++ b/src/styles/timetable.module.css
@@ -21,6 +21,7 @@
 }
 
 .timeTableSessionCell[aria-disabled="true"] {
-	color: #ABABAB;
+	background-color: #ABABAB;
+	color: #FFFFFF;
 	cursor: default;
 }
